--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/19/n10919284.md#1" target="_blank">陋兰：当告密者成为英雄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/10/25/n2308544.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
