--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/20/n10989886.md#1" target="_blank">共产暴政录：“清理阶级队伍”运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/17/n10063990.md#1" target="_blank">苏智敏：血腥计生悲歌——帮凶  弃卒  泪水</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
